tests/NormalTests/paczka1/fuzzy1/57499913.err
Error in line 2: sp4dqBuy S553 84,1
Error in line 10: S716 S847 50,1
Error in line 17: xysib9FLQ5 S716 76,1
Error in line 22: xysib9FLQ5 S847 1,0
Error in line 28: x7wPera S553 85,4
Error in line 25: xysib9FLQ5 A22 92,2
Error in line 24: RL9sf S553 54,3
